--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
 -Add shadow to top-tablet-bottom menu, and put fixed style
--Add desktop and laptop screen top
 -Fix spaces in top tablet header
+-Add effect to click
